tests/codegen/fail/object/derive_field_double_underscored.stderr
error: All types and directives defined within a schema must not have a name which begins with `__` (two underscores), as this is used exclusively by GraphQL’s introspection system.
 --> fail/object/derive_field_double_underscored.rs:5:5
  |
5 |     __test: String,
  |     ^^^^^^
  |
  = note: https://spec.graphql.org/October2021#sec-Schema
